# fert-calc

./: Cargo.toml  LICENSE  README.md  build.rs  elements.json  elements.toml  fertilizers.json  fertilizers.toml
.github/workflows/: lint-and-test.yml  release.yml
src/: compound.rs  concentration.rs  elements.rs  fertilizers_db.rs  main.rs  mix.rs  tank.rs  test_utils.rs  traits.rs  web.rs
ui/: .index.html.swp  app.js  index.html
ui-desktop/: main.slint
