[package]
authors = ["Vsevolod Stakhov <vsevolod@rspamd.com>"]
name = "fert-calc"
categories = ["command-line-utilities"]
description = "A simple calculator for DIY aquarium fertilisers"
version = "0.1.0"
keywords = ["cli", "aquarium", "fertilizers"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/vstakhov/fert-calc"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.10"
crossterm = "0.23"
accurate = { version = "0.3.1", features = [] }
clap = {version = "3.1.18", features = ["derive"]}
length = "0.2.0"
itertools = "0.10.3"
dyn-clone = "1.0.5"
toml = "0.5.9"

[profile.release]
lto = true